# my_teknofest_projects

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: agroscan__AgroScan proje sunumu.pdf.json  agroscan__AgroScan proje sunumu.pdf.txt  index.json  sonic__ExportBlock-7ea5f3ff-1aa7-4ba4-99f5-782a170eb01b-Part-1__sonic_pitch.pdf.json  sonic__ExportBlock-7ea5f3ff-1aa7-4ba4-99f5-782a170eb01b-Part-1__sonic_pitch.pdf.txt  sonic__ExportBlock-7ea5f3ff-1aa7-4ba4-99f5-782a170eb01b-Part-1__sonic_teknofest_2023_proje_deerlendirme_raporu.pdf.json  sonic__ExportBlock-7ea5f3ff-1aa7-4ba4-99f5-782a170eb01b-Part-1__sonic_teknofest_2023_proje_deerlendirme_raporu.pdf.txt  sonic__sonic azərbaycanca.pdf.json  sonic__sonic azərbaycanca.pdf.txt
docs/: MIGRATION_v0.1_to_v0.2.md  REFACTORING_SUMMARY.md  architecture.md
sonic/: README.md  __init__.py  config.example.json
sonic/ExportBlock-7ea5f3ff-1aa7-4ba4-99f5-782a170eb01b-Part-1/: SONC_APP.html  _Mouse_Detection_using_YOLOv5_Object_De.py
sonic/assets/docs/: sonic_project_overview.md
sonic/assets/mockups/: sonic_website.html
sonic/src/: __init__.py  cli.py  config.py  rat_detector.py
sonic/src/alerts/: __init__.py  base.py  handlers.py
sonic/src/core/: __init__.py  detector.py  models.py  tracker.py
sonic/src/visualization/: __init__.py  overlay.py
tests/: __init__.py  conftest.py  test_alerts.py  test_detector.py  test_tracker.py
tools/: README.md  __init__.py  text_extractor.py
